# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/permission/permission.gni")
import("//build/ohos.gni")

ohos_shared_library("record") {
  include_dirs = [
    "//base/security/permission/frameworks/permission_standard/permissioninfrastructure",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "${distributed_permission_frameworks_log_path}/main/cpp/include",
    "//foundation/ace/napi/interfaces/kits",
    "//third_party/json/single_include",
    "//third_party/node/src",
    "//utils/system/safwk/native/include",
    "${distributed_permission_services_path}/main/cpp/include/record",
    "${distributed_permission_services_path}/main/cpp/include/common",
    "${distributed_permission_services_path}/main/cpp/include/device",
    "${distributed_permission_services_path}/main/cpp/include/remote",
    "${distributed_permission_services_path}/main/cpp/include/command",
    "${distributed_permission_services_path}/main/cpp/include/protocol",
    "${distributed_permission_innerkits_distributed_path}/main/cpp/include",

    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "//foundation/communication/dsoftbus/interfaces/kits/common",
    "//foundation/communication/dsoftbus/interfaces/kits/bus_center",
    "//third_party/json/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include/bundlemgr",
    "//base/security/permission/interfaces/innerkits/permission_standard/permissionsdk/main/cpp/include",
    "//base/security/permission/interfaces/innerkits/permission_standard/permissionsdk/main/cpp/include/permission",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager/include",
    "//base/security/permission/interfaces/kits/permission_standard/napi/permission_record_mgr",
    "./",
  ]

  sources = [
    "${distributed_permission_services_path}/main/cpp/src/common/external_deps.cpp",
    "${distributed_permission_services_path}/main/cpp/src/common/time_util.cpp",
    "native_module.cpp",
    "permission_record_mgr.cpp",
  ]

  deps = [
    "${distributed_permission_frameworks_log_path}:permission_standard_infrastructure_cxx",
    "${distributed_permission_innerkits_distributed_path}:distributed_permission_innerkits",
    "${distributed_permission_innerkits_sdk_path}:libpermissionsdk_standard",
    "${distributed_permission_services_path}:distributed_permission_services",
    "${permission_path}/frameworks/permission_standard/permissioncommunicationadapter:permission_standard_communication_adapter_cxx",
    "//base/notification/ans_standard/frameworks/ans/core:ans_core",
    "//base/notification/ans_standard/frameworks/wantagent:wantagent_innerkits",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/ace/napi:ace_napi",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
  ]
  cflags_cc = [ "-DHILOG_ENABLE" ]
  external_deps = [
    "aafwk_standard:want",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"
  subsystem_name = "security"
  part_name = "permission_standard"
}
