# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

common_src = [
  "common/napi/n_class.cpp",
  "common/napi/n_func_arg.cpp",
  "common/napi/n_val.cpp",
  "common/uni_error.cpp",
  "common/ability_helper.cpp",
  "common/common_func.cpp",
]

ohos_shared_library("fileshare") {
  relative_install_dir = "module"
  subsystem_name = "distributeddatamgr"
  part_name = "storage_standard"

  include_dirs = [
    "//third_party/node/src",
    "//foundation/ace/napi/interfaces/kits",
    "//utils/native/base/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/frameworks/file_manager_service/include",
  ]

  sources = common_src
  sources += [
    "file_share_ability/file_share_exporter.cpp",
    "file_share_ability/module.cpp",
  ]

  deps = [
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/ace/napi:ace_napi",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/frameworks/file_manager_service:file_share_ability",
    "//foundation/distributedschedule/dmsfwk/interfaces/innerkits/uri:zuri",
    "//utils/native/base:utilsecurec",
  ]

  external_deps = [
    "aafwk_standard:ability_manager",
    "aafwk_standard:want",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

group("build_kits_napi") {
  deps = [ ":fileshare" ]
}
